--- a/text.yml
+++ b/text.yml
@@ -16,8 +16,20 @@ validator:
     help: test
   ls:
     help: List of available validators
+  delegations:
+    help: List of delegations for validator
+  accept_delegation:
+    help: Accept pending delegation request by delegation ID
+    confirm: |-
+      Are you sure you want to accept this delegation request?
+      Please, re-check all provided values before confirming
+    delegation_id:
+      help: ID of the delegation request to accept
+      prompt: Please enter ID of the delegation request to accept
+    pk_file:
+      help: Path to file with private key (only for `software` wallet type)
 holder:
   delegate:
-    help: AAA
+    help: Delegate tokens to validator
 msg:
   run_init: You should run < init > first
