--- a/text.yml
+++ b/text.yml
@@ -14,7 +14,22 @@ init:
     prompt: Please enter type of the wallet that will be used for signing transactions
 validator:
   register:
-    help: test
+    confirm: |-
+      Are you sure you want to register a new validator account?
+      Please, re-check all values above before confirming.
+    help: Register a new SKALE validator
+    name:
+      help: Validator name
+      prompt: Please enter validator name
+    description:
+      help: Validator description
+      prompt: Please enter validator description
+    commission_rate:
+      help: Commission rate (percentage)
+      prompt: Please enter validator commission rate (in percents)
+    min_delegation:
+      help: Validator minimum delegation amount
+      prompt: Please enter minimum delegation amount
   ls:
     help: List of available validators
   info:
@@ -29,15 +44,11 @@ validator:
     delegation_id:
       help: ID of the delegation request to accept
       prompt: Please enter ID of the delegation request to accept
-    pk_file:
-      help: Path to file with private key (only for `software` wallet type)
   link_address:
     help: Link node address to your validator account
     node_address:
       help: Address of the node to link
       prompt: Please enter address of the node to link
-    pk_file:
-      help: Path to file with private key (only for `software` wallet type)
     confirm: |-
       Are you sure you want to link this address to your validator account?
   unlink_address:
@@ -45,16 +56,33 @@ validator:
     node_address:
       help: Address of the node to unlink
       prompt: Please enter address of the node to unlink
-    pk_file:
-      help: Path to file with private key (only for `software` wallet type)
     confirm: |-
       Are you sure you want to unlink this address from your validator account?
   linked_addresses:
     help: List of the linked addresses for validator address
 holder:
+  help: Token holder commands
   delegate:
     help: Delegate tokens to validator
+    validator_id:
+      help: ID of the validator to delegate
+      prompt: Please enter ID of the validator to delegate
+    amount:
+      help: Amount of SKALE tokens to delegate
+      prompt: Please enter amount of SKALE tokens to delegate
+    delegation_period:
+      help: Delegation period (in months)
+      prompt: Please enter delegation period (in months)
+    info:
+      help: Delegation request info
+      prompt: Please enter delegation request info
     confirm: |-
       Are you sure you want to delegate your tokens?
+  delegations:
+    help: List of delegations for address
+  cancel_delegation:
+    help: Cancel pending delegation request
 msg:
   run_init: You should run < init > first
+pk_file:
+  help: Path to file with private key (only for `software` wallet type)
