--- a/text.yml
+++ b/text.yml
@@ -4,14 +4,14 @@ init:
   done: Validator CLI initialized successfully
   help: Set Ethereum endpoint and contracts URL
   endpoint:
-    help: Endpoint of the Ethereum network
-    prompt: Please enter endpoint of the Ethereum network
+    help: Endpoint of an Ethereum network
+    prompt: Please enter an endpoint for the Ethereum network to connect
   contracts_url:
     help: Download URL for the SKALE Manager ABIs and addresses
-    prompt: Please enter URL for the SKALE Manager ABIs and addresses
+    prompt: Please enter the URL for the SKALE Manager ABIs and addresses
   wallet:
-    help: Type of the wallet that will be used for signing transactions
-    prompt: Please enter type of the wallet that will be used for signing transactions
+    help: Type of wallet that will be used for signing transactions
+    prompt: Please enter the type of the wallet that will be used for signing transactions
 validator:
   register:
     confirm: |-
@@ -26,21 +26,21 @@ validator:
       prompt: Please enter validator description
     commission_rate:
       help: Commission rate (percentage)
-      prompt: Please enter validator commission rate (in percents)
+      prompt: Please enter validator commission rate (e.g. enter 0.05 for 5%)
     min_delegation:
       help: Validator minimum delegation amount
-      prompt: Please enter minimum delegation amount
+      prompt: Please enter minimum delegation amount in SKALE tokens
   ls:
     help: List of available validators
   info:
     help: Info about the validator
   delegations:
-    help: List of delegations for validator
+    help: List delegations for a validator
   accept_delegation:
     help: Accept pending delegation request by delegation ID
     confirm: |-
       Are you sure you want to accept this delegation request?
-      Please, re-check all provided values before confirming
+      Please, re-check all provided values before confirming.
     delegation_id:
       help: ID of the delegation request to accept
       prompt: Please enter ID of the delegation request to accept
