--- a/text.yml
+++ b/text.yml
@@ -84,13 +84,20 @@ holder:
     help: Cancel pending delegation request
 msg:
   run_init: You should run < init > first
+  limit:
+    help: Number of records to show
+  since:
+    help: Show requested data since timestamp (e.g. 2020-01-20), incl. given date
+  till:
+    help: Show requested data before timestamp (e.g. 2020-01-21), not incl. given date
+
 pk_file:
   help: Path to file with private key (only for `software` wallet type)
 
 bounty:
   help: Validator bounty commands
   validator:
-    help: List of aggregated bounties for a validator with given id
+    help: List of aggregated bounties for a validator with a given id
     index:
       help: Validator ID
       prompt: Enter validator ID
@@ -98,18 +105,19 @@ bounty:
       wait_msg: Please wait - collecting bounty data from blockchain...
 
 metrics:
-  help: Validator metrics commands
+  help: Node metrics commands
   node:
-    help: List of bounties and metrics for a node with given id
+    help: List of bounties and metrics for a node with a given id
     index:
-      help: Validator ID
-      prompt: Enter validator ID
-      valid_msg: Error - Validator ID should be greater than 0
+      help: Node ID
+      prompt: Enter node ID
+      valid_msg: Error - Node ID should be greater than 0
       wait_msg: Please wait - collecting metrics data from blockchain...
   validator:
-    help: List of bounties and metrics for a validator with given id
+    help: List of bounties and metrics for a validator with a given id
     index:
       help: Validator ID
       prompt: Enter validator ID
       valid_msg: Error - Validator ID should be greater than 0
       wait_msg: Please wait - collecting metrics data from blockchain...
+
