--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,11 @@ jobs:
     - name: Build binary
       run: |
         bash scripts/build.sh 1.0.0 test-branch
+    - name: Install Docker on macOS
+      if: matrix.os == 'macOS-latest'
+      run: |
+        brew install docker-machine docker
+        sudo docker –version
     - name: Prepare tests
       run: |
         bash ./scripts/prerare_tests.sh
