--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Install Docker on macOS
       if: matrix.os == 'macOS-latest'
       run: |
+        sudo kextcache --clear-staging
         brew cask install virtualbox
         brew install docker docker-machine
         curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v1.9.1/boot2docker.iso
