--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,9 @@ jobs:
       if: matrix.os == 'macOS-latest'
       run: |
         sudo kextcache --clear-staging
-        brew cask install virtualbox
+        brew cask install virtualbox || true
+        sudo installer -allowUntrusted -pkg /Volumes/VirtualBox/VirtualBox.pkg -target /
+        brew cask install  --force virtualbox
         brew install docker docker-machine
         curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v1.9.1/boot2docker.iso
         docker-machine create --driver virtualbox default
