--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,8 +18,8 @@ jobs:
         os: [macos-latest, ubuntu-latest]
         python-version: [3.7]
     env:
-      PIP_USERNAME: ${{ secrets.PIP_USERNAME }}
-      PIP_PASSWORD: ${{ secrets.PIP_PASSWORD }}
+      ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+      SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
