--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Build library
       run: |
         echo "::set-env name=PROJECT_DIR::$GITHUB_WORKSPACE"
-        echo PROJECT_DIR: $PROJECT_DIR
+        echo GITHUB_WORKSPACE: $GITHUB_WORKSPACE
         export BRANCH=${GITHUB_REF##*/}
         echo "Branch $BRANCH"
         export VERSION=$(bash ./scripts/calculate_version.sh)
