--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,21 +11,21 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }} 
+    runs-on: ubuntu-latest # ${{ matrix.os }} 
     # if: github.event.pull_request.merged
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest]
-        python-version: [3.7]
+    # strategy:
+    #   matrix:
+    #     os: [macos-latest, ubuntu-latest]
+    #     python-version: [3.7]
     env:
       ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
       SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.7 # ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.7 # ${{ matrix.python-version }}
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
