--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@master
     - name: Create Release
+      if: matrix.os == ubuntu-latest
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -61,13 +62,3 @@ jobs:
         release_name: ${{ env.VERSION }}
         draft: false
         prerelease: true
-    # - name: Add binary to release
-    #   id: upload-release-asset 
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-    #     asset_path: ./dist/${{ env.EXECUTABLE_NAME }}
-    #     asset_name: ${{ env.EXECUTABLE_NAME }}
-    #     asset_content_type: application/octet-stream
