SKALE-2241 Create release only for ubuntu build

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,9 +52,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@master
     - name: Create Release
+      if: matrix.os == 'ubuntu-latest'
       id: create_release
       uses: actions/create-release@v1
-      if: matrix.os == "ubuntu-latest"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
