--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,18 +1,16 @@
 name: Build and publish
-on: [push, pull_request]
-
-# on:
-#   pull_request:
-#     types: [closed]
-#     branches:
-#       - master
-#       - develop
-#       - beta
+on:
+  pull_request:
+    types: [closed]
+    branches:
+      - master
+      - develop
+      - beta
 
 jobs:
   build:
     runs-on: ${{ matrix.os }} 
-    # if: github.event.pull_request.merged
+    if: github.event.pull_request.merged
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
