--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,12 @@ jobs:
     - name: Build binary
       run: |
         bash scripts/build.sh 1.0.0 test-branch
-    - name: Prepare tests
+    - name: Deploy manager contracts
       run: |
-        bash ./scripts/prerare_tests.sh
+        bash ./scripts/deploy_manager.sh
+    - name: Prepare configs
+      run: |
+        bash ./scripts/prerare_configs.sh
     - name: Run tests
       run: |
         bash ./scripts/run_tests.sh
