--- a/text.yml
+++ b/text.yml
@@ -90,6 +90,8 @@ msg:
     help: Show requested data since timestamp (e.g. 2020-01-20), incl. given date
   till:
     help: Show requested data before timestamp (e.g. 2020-01-21), not incl. given date
+  no_data: No data found for a given period
+
 
 pk_file:
   help: Path to file with private key (only for `software` wallet type)
