--- a/text.yml
+++ b/text.yml
@@ -62,6 +62,14 @@ validator:
       Are you sure you want to unlink this address from your validator account?
   linked_addresses:
     help: List of the linked addresses for validator address
+  withdraw_bounty:
+    help: Withdraw earned bounty to specified address
+    confirm: |-
+      Are you sure you want to withdraw bounty?
+  withdraw_fee:
+    help: Withdraw earned fee to specified address
+    confirm: |-
+      Are you sure you want to withdraw fees?
 holder:
   help: Token holder commands
   delegate:
@@ -86,6 +94,12 @@ holder:
       help: Show delegation amount in wei
   cancel_delegation:
     help: Cancel pending delegation request
+  undelegate:
+    help: Request undelegation in the end of delegation period
+  locked:
+    help: Show amount of locked tokens for address
+    wei:
+      help: Show amount in wei
 msg:
   run_init: You should run < init > first
   limit:
