--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install python dependencies
       run: |
+        apt intstall libudev-dev
+        apt intall libusb-1.0-0-dev
         python -m pip install --upgrade pip
         pip install -e .
         pip install -e .[dev]
