--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install ubuntu dependencies
+      if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install libudev-dev
         sudo apt-get install libusb-1.0-0-dev
