--- a/text.yml
+++ b/text.yml
@@ -25,8 +25,8 @@ validator:
       help: Validator description
       prompt: Please enter validator description
     commission_rate:
-      help: Commission rate (percents %)
-      prompt: Please enter validator commission rate in percents (0 - 100)
+      help: Commission rate (percent %)
+      prompt: Please enter validator commission rate in percent (0 - 100)
     min_delegation:
       help: Validator minimum delegation amount
       prompt: Please enter minimum delegation amount in SKALE tokens
