--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .
         pip install -e .[dev]
+        pip install --upgrade 'setuptools<45.0.0'
     - name: Lint with flake8
       run: |
         flake8 .
