--- a/text.yml
+++ b/text.yml
@@ -48,6 +48,11 @@ validator:
     delegation_id:
       help: ID of the delegation request to accept
       prompt: Please enter ID of the delegation request to accept
+  accept_all_delegations:
+    help: Accept ALL pending delegations request for your address
+    confirm: |-
+      Are you sure you want to accept ALL delegation requests?
+      Please, re-check all pending delegations by running < sk-val validator delegations >
   link_address:
     help: Link node address to your validator account
     node_address:
