--- a/text.yml
+++ b/text.yml
@@ -143,6 +143,9 @@ pk_file:
   help: Path to file with private key (only for `software` wallet type)
 address_index:
   help: Index of the address to use (only for `ledger` wallet type)
+  prompt: Please enter the address index (staring from 0)
+legacy:
+  help: Use Ledger Legacy keys (Ledger Live keys will be used by default)
 yes_opt:
   prompt: Are you sure?
 wei:
@@ -200,3 +203,8 @@ wallet:
     confirm: |-
       Are you sure you want to send SKL?
       Please, re-check all values above before confirming.
+  setup_ledger:
+    help: Configure Ledger device account
+    keys_type:
+      help: Type of the Ledger keys (live or legacy)
+      prompt: Enter type of the Ledger keys (live or legacy)
