--- a/text.yml
+++ b/text.yml
@@ -85,6 +85,12 @@ validator:
     help: Confirm address change for the validator
   earned_fees:
     help: Get earned fee amount for the validator address
+  edit:
+    help: Edit name or description of your validator
+    name:
+      help: Validator name
+    description:
+      help: Validator description
 holder:
   help: Token holder commands
   delegate:
