--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   create_release:
+    if: github.event.pull_request.merged
     name: Create release
     runs-on: ubuntu-latest
     outputs:
