--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       ETH_PRIVATE_KEY: ${{ secrets.ETH_PRIVATE_KEY }}
       ENDPOINT: ${{ secrets.ENDPOINT }}
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      MANAGER_TAG: "test-srw"
+      MANAGER_TAG: "test-srw-2"
       SGX_WALLET_TAG: "1.58.0-stable.0"
     steps:
     - uses: actions/checkout@v2
