--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,8 +49,8 @@ jobs:
         include:
           - os: ubuntu-18.04
             asset_name: sk-val-${{ needs.create_release.outputs.version }}-Linux-x86_64
-          - os: macos-latest
-            asset_name: sk-val-${{ needs.create_release.outputs.version }}-Darwin-x86_64
+            # - os: macos-latest
+            #   asset_name: sk-val-${{ needs.create_release.outputs.version }}-Darwin-x86_64
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
