--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,6 +63,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install libudev-dev
         sudo apt-get install libusb-1.0-0-dev
+    - name: Install macOS dependencies
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install swig
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
