--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Install macOS dependencies
       if: matrix.os == 'macos-latest'
       run: |
-        brew install swig
+        bash ./scripts/m2crypto_macos_fix.sh
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
