--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install ubuntu dependencies
       run: |
         sudo apt-get update
+        sudo apt-get install openssl=3.0.7
         sudo apt-get install python-setuptools
         sudo apt-get install libudev-dev
         sudo apt-get install libusb-1.0-0-dev
