Fix Darwin build

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,8 @@
 name: Build and publish
 on:
   pull_request:
-    types: [closed]
     branches:
-      - master
-      - develop
-      - beta
-      - stable
+      - debug-publish-pipeline
 
 jobs:
   create_release:
