--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,9 +44,11 @@ jobs:
       matrix:
         include:
           - os: ubuntu-22.04
-            asset_name: sk-val-${{ needs.create_release.outputs.version }}-Linux-x86_64
+            # asset_name: sk-val-${{ needs.create_release.outputs.version }}-Linux-x86_64
+            asset_name: sk-val-test-Darwin-x86_64
           - os: macos-latest
-            asset_name: sk-val-${{ needs.create_release.outputs.version }}-Darwin-x86_64
+            # asset_name: sk-val-${{ needs.create_release.outputs.version }}-Darwin-x86_64
+            asset_name: sk-val-test-Darwin-x86_64
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -74,14 +76,15 @@ jobs:
       run: git submodule update --init
     - name: Build library
       run: |
-        bash ./scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: ./dist/${{ matrix.asset_name }}
-        asset_name: ${{ matrix.asset_name }}
-        asset_content_type: application/octet-stream
+        # bash ./scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
+        bash ./scripts/build.sh test test
+        # - name: Upload Release Asset
+        #   id: upload-release-asset 
+        #   uses: actions/upload-release-asset@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     upload_url: ${{ needs.create_release.outputs.upload_url }}
+        #     asset_path: ./dist/${{ matrix.asset_name }}
+        #     asset_name: ${{ matrix.asset_name }}
+        #     asset_content_type: application/octet-stream
