--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ on:
       - develop
       - beta
       - stable
+      - fix-build
 
 jobs:
   create_release:
@@ -40,7 +41,7 @@ jobs:
           echo "::set-output name=version::$VERSION"
           echo "::set-output name=branch::$BRANCH"
   build_and_publish:
-    if: github.event.pull_request.merged
+    # if: github.event.pull_request.merged
     needs: create_release
     name: Build and publish for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -79,13 +80,13 @@ jobs:
     - name: Build library
       run: |
         bash ./scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: ./dist/${{ matrix.asset_name }}
-        asset_name: ${{ matrix.asset_name }}
-        asset_content_type: application/octet-stream
+        # - name: Upload Release Asset
+        #   id: upload-release-asset 
+        #   uses: actions/upload-release-asset@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     upload_url: ${{ needs.create_release.outputs.upload_url }}
+        #     asset_path: ./dist/${{ matrix.asset_name }}
+        #     asset_name: ${{ matrix.asset_name }}
+        #     asset_content_type: application/octet-stream
