Remove needs requirement

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
           echo "::set-output name=branch::$BRANCH"
   build_and_publish:
     # if: github.event.pull_request.merged
-    needs: create_release
+    # needs: create_release
     name: Build and publish for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
