Install libssl-dev instead of libssl3

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install ubuntu dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install libssl3=3.0.2-0ubuntu1.7
+        sudo apt-get install libssl-dev
         sudo apt-get install python-setuptools
         sudo apt-get install libudev-dev
         sudo apt-get install libusb-1.0-0-dev
@@ -33,7 +33,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .
         pip install -e .[dev]
-        pip install --upgrade 'setuptools<45.0.0'
+        pip install --upgrade 'setuptools==63.2.0'
     - name: Lint with flake8
       run: |
         flake8 .
