--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,12 @@ jobs:
         flake8 .
     - name: Build binary
       run: |
-        bash scripts/build.sh 0.0.0 test-branch
+        mkdir ./dist
+        docker build . -t node-cli-builder
+        docker run  -v /home/ubuntu/dist:/app/dist node-cli-builder scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
+        ls -altr /home/ubuntu/dist/
+        docker rm -f $(docker ps -aq)
+
     - name: Deploy manager contracts
       run: |
         bash ./helper-scripts/deploy_test_manager.sh
