--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -84,14 +84,15 @@ jobs:
       run: |
         mkdir ./dist
         docker build . -t builder
-        docker run  -v /home/ubuntu/dist:/app/dist builder scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
-        ls -altr /home/ubuntu/dist/
+        docker run -v /home/ubuntu/dist:/app/dist builder scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
+        ls -altr $HOME/dist/
         docker rm -f $(docker ps -aq)
 
     - name: Build binary mac
       if: matrix.os == 'macos-latest'
       run: |
         bash ./scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
+
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
@@ -99,6 +100,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: /home/ubuntu/dist/${{ matrix.asset_name }}
+        asset_path: $HOME/dist/${{ matrix.asset_name }}
         asset_name: ${{ matrix.asset_name }}
         asset_content_type: application/octet-stream
