--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,10 +82,10 @@ jobs:
     - name: Build binary linux
       if: matrix.os == 'ubuntu-20.04'
       run: |
-        mkdir ./dist
+        mkdir /home/ubuntu/dist
         docker build . -t builder
         docker run -v /home/ubuntu/dist:/app/dist builder scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
-        ls -altr $HOME/dist/
+        ls -altr /home/ubuntu/dist/
         docker rm -f $(docker ps -aq)
 
     - name: Build binary mac
@@ -93,13 +93,26 @@ jobs:
       run: |
         bash ./scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
 
-    - name: Upload Release Asset
+    - name: Upload Release Asset Ubuntu
+      if: matrix.os == 'ubuntu-20.04'
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env:
+      with:
+        upload_url: ${{ needs.create_release.outputs.upload_url }}
+        asset_path: /home/ubuntu/dist/${{ matrix.asset_name }}
+        asset_name: ${{ matrix.asset_name }}
+        asset_content_type: application/octet-stream
+
+    - name: Upload Release Asset Mac
+      if: matrix.os == 'macos-latest'
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: $HOME/dist/${{ matrix.asset_name }}
+        asset_path: ./dist/${{ matrix.asset_name }}
         asset_name: ${{ matrix.asset_name }}
         asset_content_type: application/octet-stream
