--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Build binary linux
       if: matrix.os == 'ubuntu-20.04'
       run: |
-        mkdir /home/ubuntu/dist
+        mkdir dist
         docker build . -t builder
         docker run -v /home/ubuntu/dist:/app/dist builder scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
         ls -altr /home/ubuntu/dist/
