--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         mkdir dist
         docker build . -t builder
-        docker run  -v /home/ubuntu/dist:/app/dist builder scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
+        docker run  -v /home/ubuntu/dist:/app/dist builder scripts/build.sh test test
         ls -altr /home/ubuntu/dist/
         docker rm -f $(docker ps -aq)
 
