--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -87,11 +87,13 @@ jobs:
         docker run -v /home/ubuntu/dist:/app/dist builder scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
         ls -altr /home/ubuntu/dist/
         docker rm -f $(docker ps -aq)
+        sudo sha512sum /home/ubuntu/dist/${{ matrix.asset_name }} | sudo tee > /dev/null /home/ubuntu/dist/sha512sum
 
     - name: Build binary mac
       if: matrix.os == 'macos-latest'
       run: |
         bash ./scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
+        sudo sha512sum ./dist/${{ matrix.asset_name }} | sudo tee > /dev/null /home/ubuntu/dist/sha512sum
 
     - name: Upload Release Asset Ubuntu
       if: matrix.os == 'ubuntu-20.04'
@@ -105,6 +107,18 @@ jobs:
         asset_name: ${{ matrix.asset_name }}
         asset_content_type: application/octet-stream
 
+    - name: Upload release checksum
+      if: matrix.os == 'ubuntu-20.04'
+      id: upload-release-checksum
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ needs.create_release.outputs.upload_url }}
+        asset_path: /home/ubuntu/dist/sha512sum
+        asset_name: ${{ matrix.asset_name }}.sha512
+        asset_content_type: text/plain
+
     - name: Upload Release Asset Mac
       if: matrix.os == 'macos-latest'
       id: upload-release-asset-mac
@@ -116,3 +130,15 @@ jobs:
         asset_path: ./dist/${{ matrix.asset_name }}
         asset_name: ${{ matrix.asset_name }}
         asset_content_type: application/octet-stream
+
+    - name: Upload release checksum
+      if: matrix.os == 'macos-latest'
+      id: upload-release-checksum
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ needs.create_release.outputs.upload_url }}
+        asset_path: ./dist/sha512sum
+        asset_name: ${{ matrix.asset_name }}.sha512
+        asset_content_type: text/plain
